# kanari-sdk_V2

./: ARCHITECTURE_REFACTORING.md  Cargo.toml  IMPROVEMENTS_SUMMARY.md  STATE_MANAGER_IMPROVEMENTS.md  TRANSFER_SYSTEM_README.md  WALLET_GUIDE.md
DOCS/: RPC_ENGINE_CALLS.md  SYSTEM_ER.md
crates/kanari/: Cargo.toml  MOVE_CLI_GUIDE.md
crates/kanari-bank/: Cargo.toml  MOVE_VM_USAGE.md
crates/kanari-bank/src/: main.rs  move_compiler_wrapper.rs  move_runtime.rs  move_vm_state.rs
crates/kanari-common/: Cargo.toml
crates/kanari-common/src/: lib.rs
crates/kanari-crypto/: BUG_ANALYSIS_NEW.md  BUG_SUMMARY.md  Cargo.toml  POST_QUANTUM_GUIDE.md  QUANTUM_SECURITY_ANALYSIS.md  SECURITY_ENHANCEMENTS.md  TEST_REPORT.md  UPGRADE_SUMMARY_TH.md
crates/kanari-crypto/examples/: README.md  hd_wallet_example.rs  move_coin_wallet.rs  pqc_demo.rs  quantum_comparison.rs  sign_verify.rs
crates/kanari-crypto/src/: audit.rs  backup.rs  compression.rs  encryption.rs  hd_wallet.rs  hsm.rs  key_rotation.rs  keys.rs  keystore.rs  lib.rs  signatures.rs  wallet.rs
crates/kanari-framework-builder/: Cargo.toml  README.md
crates/kanari-frameworks/: Cargo.toml  README.md
crates/kanari-frameworks/released/1/0x1/: package.rpd
crates/kanari-frameworks/released/1/0x2/: package.rpd
crates/kanari-frameworks/released/2/0x1/: package.rpd
crates/kanari-frameworks/released/2/0x2/: package.rpd
crates/kanari-frameworks/released/latest/0x1/: package.rpd
crates/kanari-frameworks/released/latest/0x2/: package.rpd
crates/kanari-frameworks/src/: compiler.rs  doc_generator.rs  main.rs  packages_config.rs
crates/kanari-move-runtime/: Cargo.toml
crates/kanari-move-runtime/examples/: blockchain_demo.rs  contract_demo.rs  contract_demo_signed.rs
crates/kanari-move-runtime/src/: blockchain.rs  contract.rs  engine.rs  gas.rs  lib.rs  move_runtime.rs  move_vm_state.rs  state.rs
crates/kanari-node/: Cargo.toml
crates/kanari-node/src/: main.rs
crates/kanari-rpc-api/: Cargo.toml
crates/kanari-rpc-api/src/: lib.rs
crates/kanari-rpc-client/: Cargo.toml
crates/kanari-rpc-client/src/: lib.rs
crates/kanari-rpc-server/: Cargo.toml
crates/kanari-rpc-server/src/: lib.rs
crates/kanari-types/: Cargo.toml  README.md  SYNC_STATUS.md  validate-sync.ps1
crates/kanari-types/examples/: module_connection_demo.rs  module_registry_demo.rs
crates/kanari-types/src/: address.rs  balance.rs  block.rs  coin.rs  framework_path.rs  genesis.rs  kanari.rs  lib.rs  module_registry.rs  move_module.rs  object.rs  transfer.rs  tx_context.rs
crates/kanari-types/src/stdlib/: ascii.rs  error.rs  mod.rs  option.rs  signer.rs  string.rs  vector.rs
crates/kanari-types/tests/: integration_test.rs
crates/kanari/src/: main.rs
crates/kanari/src/command/move_cli/: call.rs  mod.rs  new.rs  publish.rs  test.rs
james/: Move.toml
james/sources/: james.move
james/tests/: james_tests.move
