[workspace]
# Workspace configuration for the "kanari-sdk" project.
# Defines the overall structure and settings for the workspace.
# name = "kanari-sdk"
resolver = "2"                   # Use the version 2 feature resolver for more consistent feature resolution.

# Exclude List: Directories to be excluded from the workspace build.
# This can be useful for excluding third-party code or components 
# that are not directly part of the workspace's build process.
exclude = [
    "third_party/move"           # Exclude the 'third_party/move' directory from workspace builds.
]

# Members List: Crates that are part of this workspace.
# These are the core components of the "kanari-" project.
members = [
      "crates/kanari",
      "crates/kanari-common",
      "crates/kanari-crypto", 
      "crates/kanari-framework-builder",
      "crates/kanari-frameworks", 
      "crates/kanari-move-runtime", 
      "crates/kanari-types",
      "crates/kanari-node",
      "crates/kanari-rpc-api", 
      "crates/kanari-rpc-client", 
      "crates/kanari-rpc-server"
]


# Workspace Package Configuration: Metadata for the entire workspace as a package.
# This information is used when publishing the SDK as a crate.
[workspace.package]
edition = "2024"                                                                                                   # Use Rust 2024 edition.
categories = ["development-tools"]                                                                                 # Categorize as development tools on crates.io.
keywords = ["blockchain", "sdk", "move", "monaOS", "monaVM", "rust", "ifps", "storage", "wallet", "framework"]     # Keywords for crates.io search.
homepage = "https://kanari.network"                                                                                # Project homepage.
documentation = "https://docs.kanari.network"                                                                      # Link to project documentation.
version = "0.1.3"                                                                                                  # Current version of the SDK.
authors = ["Kanari Network"]                                                                                       # Authors of the SDK.
license = "Apache-2.0"                                                                                             # License information.
repository = "https://github.com/kanari-network/kanari-sdk"                                                        # Link to the code repository.
description = "Kanari Network SDK"                                                                                 # Short description of the SDK.


# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
walkdir = "2.3.1"
smallvec = "1.6.1"
sha2 = "0.9.3"
anyhow = "1.0.52"
tempfile = "3.2.0"
sha3 = "0.10.8"
bip39 = { version = "2.0.0", features = ["rand"] }
rand = "0.8.5"
hex = "0.4.3"
bcs = { version = "0.1.6" }
serde_json = { version = "1.0.145", default-features = true }
lazy_static = { version = "1.5.0", default-features = true }
serde_yaml = { version = "0.9.34-deprecated", default-features = true }
toml = { version = "0.9.7", default-features = true }
log = { version = "0.4.28", default-features = true }
serde = { version = "1.0.228", default-features = true }
thiserror = { version = "2.0.17", default-features = true }
primitive-types = { version = "0.14.0", default-features = true }
argon2 = { version = "0.5.3", default-features = true }

kanari-common = { path = "crates/kanari-common" }
kanari-crypto = { path = "crates/kanari-crypto" }
kanari-types = { path = "crates/kanari-types" }
kanari-move-runtime = { path = "crates/kanari-move-runtime" }
kanari-framework-builder = { path = "crates/kanari-framework-builder" }
kanari-frameworks = { path = "crates/kanari-frameworks" }
kanari-rpc-api = { path = "crates/kanari-rpc-api" }
kanari-rpc-client = { path = "crates/kanari-rpc-client" }
kanari-rpc-server = { path = "crates/kanari-rpc-server" }

# Move dependencies
move-binary-format = { path = "third_party/move/crates/move-binary-format" }
move-bytecode-utils = { path = "third_party/move/crates/move-bytecode-utils" }
move-bytecode-source-map = { path = "third_party/move/crates/move-bytecode-source-map" }
move-cli = { path = "third_party/move/crates/move-cli" }
move-compiler = { path = "third_party/move/crates/move-compiler" }
move-core-types = { path = "third_party/move/crates/move-core-types" }
move-disassembler = { path = "third_party/move/crates/move-disassembler" }
move-package = { path = "third_party/move/crates/move-package" }
move-unit-test = { path = "third_party/move/crates/move-unit-test" }
move-vm-config = { path = "third_party/move/crates/move-vm-config" }
move-vm-test-utils = { path = "third_party/move/crates/move-vm-test-utils/", features = [
  "tiered-gas",
] }
move-vm-types = { path = "third_party/move/crates/move-vm-types" }
move-vm-profiler = { path = "third_party/move/crates/move-vm-profiler" }
move-command-line-common = { path = "third_party/move/crates/move-command-line-common" }
move-transactional-test-runner = { path = "third_party/move/crates/move-transactional-test-runner" }
move-ir-types = { path = "third_party/move/crates/move-ir-types" }
move-prover = { path = "third_party/move/crates/move-prover" }
move-stackless-bytecode = { path = "third_party/move/crates/move-stackless-bytecode" }
move-symbol-pool = { path = "third_party/move/crates/move-symbol-pool" }
move-abstract-stack = { path = "third_party/move/crates/move-abstract-stack" }
move-docgen = { path = "third_party/move/crates/move-docgen" }
move-errmapgen = { path = "third_party/move/crates/move-errmapgen" }
move-stdlib-natives = { path = "third_party/move/crates/move-stdlib-natives" }

move-vm-runtime = { path = "third_party/move/crates/move-vm-runtime" }
move-coverage = { path = "third_party/move/crates/move-coverage" }
move-bytecode-verifier = { path = "third_party/move/crates/move-bytecode-verifier" }