[package]
name = "kanari-common"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde_yaml = { workspace = true , default-features = true }
dirs = "6.0.0"