[package]
name = "kanari-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
bip39.workspace = true
# Core crypto libraries
k256 = { version = "0.13.1", features = ["ecdsa", "std"] }
p256 = { version = "0.13.2", features = ["ecdsa", "std"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha3 = "0.10.8"
zstd = "0.13.3"


# Make blake3 optional and enabled via the blake3 feature
blake3 = { version = "1.3.1", optional = true }
bincode = "2.0.1"

rand.workspace = true
hex.workspace = true
serde_json = { workspace = true , default-features = true }
lazy_static.workspace = true
serde_yaml.workspace = true
toml.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true
argon2.workspace = true
aes-gcm = "0.10.3"
base64 = "0.22.1"
# Add common dependency

kanari-types.workspace = true
kanari-common.workspace = true

[features]
# keep blake3 optional in Cargo.toml but enable it in the crate default features
default = ["blake3"]