[package]
name = "kanari-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
bip39.workspace = true
# Core crypto libraries
k256 = { version = "0.13.1", features = ["ecdsa", "std"] }
p256 = { version = "0.13.2", features = ["ecdsa", "std"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha3 = "0.10.8"
zstd = "0.13.3"

# Post-Quantum Cryptography (PQC) - NIST Standards
pqcrypto-dilithium = "0.5"  # Post-quantum signatures
pqcrypto-kyber = "0.8"      # Post-quantum key encapsulation
pqcrypto-sphincsplus = "0.7.2" # Hash-based signatures (ultra-secure)
pqcrypto-traits = "0.3"     # Common traits for PQC

# Make blake3 optional and enabled via the blake3 feature
blake3 = { version = "1.3.1", optional = true }
bincode = "2.0.1"

# BIP32/BIP44 HD wallet support
bip32 = "0.3"

rand.workspace = true
hex.workspace = true
serde_json = { workspace = true , default-features = true }
lazy_static.workspace = true
serde_yaml.workspace = true
toml.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true
argon2.workspace = true
aes-gcm = "0.10.3"
base64 = "0.22.1"

# Time handling for audit logging
chrono = "0.4"

# Add common dependency

kanari-types.workspace = true
kanari-common.workspace = true

[dev-dependencies]
tempfile = "3.8"

[features]
# keep blake3 optional in Cargo.toml but enable it in the crate default features
default = ["blake3", "pqc"]
pqc = []  # Post-quantum cryptography feature
hybrid = ["pqc"]  # Hybrid classical + PQC schemes