[package]
name = "kanari-framework-builder"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

# Specify a build script to generate framework files before building.
build = "build.rs"

[build-dependencies]
move-package.workspace = true
