[package]
name = "kanari-frameworks"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "kanari-frameworks"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
kanari-types = { path = "../kanari-types" }
move-compiler = { path = "../../third_party/move/crates/move-compiler" }
move-command-line-common = { path = "../../third_party/move/crates/move-command-line-common" }
move-symbol-pool = { path = "../../third_party/move/crates/move-symbol-pool" }
move-core-types = { path = "../../third_party/move/crates/move-core-types" }
move-binary-format = { path = "../../third_party/move/crates/move-binary-format" }
move-docgen.workspace = true
move-errmapgen.workspace = true
move-prover.workspace = true
move-vm-types.workspace = true
log.workspace = true
walkdir.workspace = true
