[package]
name = "kanari-frameworks"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "kanari-frameworks"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
clap = { workspace = true, features = ["derive"] }
kanari-types.workspace = true
move-compiler.workspace = true
move-command-line-common.workspace = true 
move-symbol-pool.workspace = true
move-core-types.workspace = true
move-binary-format.workspace = true
move-docgen.workspace = true
move-errmapgen.workspace = true
move-prover.workspace = true
move-vm-types.workspace = true
log.workspace = true
walkdir.workspace = true
