[package]
name = "kanari-move-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bcs = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rocksdb = "0.20"
hex = "0.4"

# Move VM dependencies (use workspace/local paths similar to other crates)
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-binary-format = { workspace = true }
move-vm-types = { workspace = true }
move-vm-test-utils = { workspace = true }

kanari-types = { workspace = true }
kanari-crypto = { workspace = true }

