[package]
name = "kanari-move-runtime"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dirs = { workspace = true }
rocksdb = { workspace = true }
hex = { workspace = true }

# Move VM dependencies (use workspace/local paths similar to other crates)
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-binary-format = { workspace = true }
move-vm-types = { workspace = true }
move-vm-test-utils = { workspace = true }

kanari-types = { workspace = true }
kanari-crypto = { workspace = true }
