[package]
name = "kanari-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
hex = { workspace = true }
kanari-move-runtime = { path = "../kanari-move-runtime" }
kanari-rpc-server = { path = "../kanari-rpc-server" }
kanari-types = { path = "../kanari-types" }
kanari-crypto = { path = "../kanari-crypto" }
serde = { workspace = true }
bcs = { workspace = true }
move-core-types = { workspace = true }
move-binary-format = { path = "../../third_party/move/crates/move-binary-format" }
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 0
