[package]
name = "kanari-node"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = "1.0"
hex = { workspace = true }
kanari-move-runtime = { path = "../kanari-move-runtime" }
kanari-rpc-server = { path = "../kanari-rpc-server" }
kanari-types = { path = "../kanari-types" }
kanari-crypto = { path = "../kanari-crypto" }
serde = { workspace = true }
bcs = { workspace = true }
move-core-types = { workspace = true }
move-binary-format = { workspace = true }
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 0
