[package]
name = "kanari-rpc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
kanari-rpc-api = { path = "../kanari-rpc-api" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
