[package]
name = "kanari-types"
version = "0.1.0"
edition = "2024"

[dependencies]
# The `move-core-types` crate contains the core types of the Move language.
# Move dependencies
move-core-types = { workspace = true}

# Error handling
anyhow = "1.0"

log.workspace = true
lazy_static.workspace = true
bcs.workspace = true
serde.workspace = true
hex.workspace = true
primitive-types.workspace = true
thiserror.workspace = true