[package]
name = "kanari"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Web framework (optional - for API)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }

# IOTA SDK (if available)
# iota-sdk = "1.0"

# Cryptography
hex = "0.4"

# Path utilities
dirs = "5.0"
sha3 = "0.10"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Local dependencies
kanari-crypto = { path = "../kanari-crypto" }
kanari-types = { path = "../kanari-types" }
kanari-move-runtime = { path = "../kanari-move-runtime" }
kanari-rpc-client = { path = "../kanari-rpc-client" }

# Move dependencies
move-core-types = { workspace = true }
move-vm-runtime = { path = "../../third_party/move/crates/move-vm-runtime" }
move-binary-format = { workspace = true }
move-bytecode-verifier = { path = "../../third_party/move/crates/move-bytecode-verifier" }
move-vm-types = { workspace = true }
move-compiler = { workspace = true }
move-symbol-pool = { workspace = true }
move-command-line-common = { workspace = true }
bcs = { workspace = true }

[features]
default = []
api = ["axum", "tower"]

[[bin]]
name = "kanari"
path = "src/main.rs"
