[package]
name = "kanari"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Web framework (optional - for API)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }

reqwest = { version = "0.11", features = ["blocking", "json"] }


# Cryptography
hex = "0.4"

# Path utilities
dirs = "5.0"
sha3 = "0.10"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Local dependencies
kanari-crypto = { workspace = true }
kanari-types = { workspace = true }
kanari-move-runtime = { workspace = true }
kanari-rpc-client = { workspace = true }
kanari-rpc-api = { workspace = true }
kanari-common = { workspace = true }

# Move dependencies
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-binary-format = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-vm-types = { workspace = true }
move-compiler = { workspace = true }
move-symbol-pool = { workspace = true }
move-command-line-common = { workspace = true }
move-docgen = { workspace = true }
move-package = { workspace = true }
move-coverage = { workspace = true }
move-vm-test-utils = { workspace = true }
move-unit-test = { workspace = true }

bcs = { workspace = true }
move-stdlib-natives = { workspace = true }

[features]
default = []
api = ["axum", "tower"]

[[bin]]
name = "kanari"
path = "src/main.rs"
