[package]
name = "kanari"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Web framework (optional - for API)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }

reqwest = { workspace = true, features = ["blocking", "json"] }

# Cryptography
hex = { workspace = true }

# CLI
clap = { workspace = true, features = ["derive"] }

# Local dependencies
kanari-crypto = { workspace = true }
kanari-types = { workspace = true }
kanari-move-runtime = { workspace = true }
kanari-rpc-client = { workspace = true }
kanari-rpc-api = { workspace = true }
kanari-common = { workspace = true }

# Move dependencies
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-binary-format = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-vm-types = { workspace = true }
move-compiler = { workspace = true }
move-symbol-pool = { workspace = true }
move-command-line-common = { workspace = true }
move-docgen = { workspace = true }
move-package = { workspace = true }
move-coverage = { workspace = true }
move-vm-test-utils = { workspace = true }
move-unit-test = { workspace = true }

bcs = { workspace = true }
move-stdlib-natives = { workspace = true }

[features]
default = []
api = ["axum", "tower"]

[[bin]]
name = "kanari"
path = "src/main.rs"
